--- a/corps/main.html
+++ b/corps/main.html
@@ -12,20 +12,27 @@
 
   <!-- Tailwind 4 -->
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+  <!-- 🔒 FIX: скрываем Alpine-блоки до инициализации -->
+  <style>
+    [x-cloak] { display: none !important; }
+  </style>
 </head>
 
-<body class="bg-white text-[#24272A]">
+<body class="bg-white text-[#24272A] relative">
 
   <!-- GLOBAL -->
   <div data-include="/tpl/header.html"></div>
   <div data-include="/tpl/menu.html"></div>
+
+  <!-- MOBILE MENU (ВАЖНО: x-cloak внутри tpl) -->
   <div data-include="/tpl/menu-mobile.html"></div>
 
   <!-- ================= MAIN ================= -->
-  <main class="max-w-[1600px] mx-auto px-4 lg:px-[60px] py-[60px] lg:py-[80px]">
+  <main class="max-w-[1600px] mx-auto px-4 lg:px-[60px] py-[40px] lg:py-[80px]">
 
     <!-- BREADCRUMBS -->
-    <nav class="font-['Wix_Madefor_Display'] text-[20px] leading-[1.6] mb-10">
+    <nav class="font-['Wix_Madefor_Display'] text-[14px] lg:text-[20px] leading-[1.6] mb-6 lg:mb-10">
       <a href="/corps/index.html" class="text-[#8D9399] hover:text-[#24272A]">
         Корпуса
       </a>
@@ -36,48 +43,60 @@
     </nav>
 
     <!-- TITLE -->
-    <h1 class="font-['Racama'] text-[72px] leading-[0.95] tracking-[-0.02em] mb-[60px]">
+    <h1 class="font-['Racama']
+               text-[36px] sm:text-[48px] lg:text-[72px]
+               leading-[0.95]
+               tracking-[-0.02em]
+               mb-[24px] lg:mb-[60px]">
       Главный корпус
     </h1>
 
+    <!-- MAIN IMAGE (MOBILE) -->
+    <img
+      src="/assets/img/corps/main.png"
+      alt="Главный корпус музея"
+      class="w-full h-[220px] sm:h-[320px] lg:h-[480px]
+             object-cover mb-[32px] lg:hidden"
+    >
+
+    <!-- MOBILE WORKTIME -->
+    <div class="lg:hidden mb-[40px]">
+      <div data-include="/tpl/worktime.html"></div>
+    </div>
+
     <!-- ================= TOP SECTION ================= -->
-    <section class="grid grid-cols-1 lg:grid-cols-[1fr_480px] gap-[60px] lg:gap-[145px]">
+    <section class="grid grid-cols-1 lg:grid-cols-[1fr_480px] gap-[40px] lg:gap-[145px]">
 
       <!-- LEFT CONTENT -->
-      <div class="flex flex-col gap-[60px]">
+      <div class="flex flex-col gap-[40px] lg:gap-[60px]">
 
-        <!-- MAIN IMAGE -->
+        <!-- DESKTOP IMAGE -->
         <img
           src="/assets/img/corps/main.png"
           alt="Главный корпус музея"
-          class="w-full h-[480px] object-cover"
+          class="hidden lg:block w-full h-[480px] object-cover"
         >
 
         <!-- EXHIBITIONS -->
         <section>
-          <h2 class="font-['Racama'] text-[40px] leading-[0.95] mb-8">
+          <h2 class="font-['Racama'] text-[28px] lg:text-[40px] leading-[0.95] mb-6 lg:mb-8">
             Экспозиции и выставки
           </h2>
 
-          <div class="flex flex-col gap-8 font-['Wix_Madefor_Display'] text-[20px] leading-[1.6]">
+          <div class="flex flex-col gap-6 font-['Wix_Madefor_Display'] text-[16px] lg:text-[20px] leading-[1.6]">
 
-            <div class="flex gap-6">
-              <img src="/assets/img/corps/v3.png" class="w-[230px] h-[120px] object-cover shrink-0" alt="">
-              <p>
-                Выставка «Свидетели осады Троице-Сергиева монастыря:
-                археологические артефакты раскопок 2022–2023 гг.»
-              </p>
+            <div class="flex gap-4">
+              <img src="/assets/img/corps/v3.png" class="w-[120px] h-[80px] lg:w-[230px] lg:h-[120px] object-cover shrink-0" alt="">
+              <p>Выставка «Свидетели осады Троице-Сергиева монастыря»</p>
             </div>
 
-            <div class="flex gap-6">
-              <img src="/assets/img/corps/v2.png" class="w-[230px] h-[120px] object-cover shrink-0" alt="">
-              <p>
-                Выставка «Осенний салон — 2025. Живопись, графика, скульптура»
-              </p>
+            <div class="flex gap-4">
+              <img src="/assets/img/corps/v2.png" class="w-[120px] h-[80px] lg:w-[230px] lg:h-[120px] object-cover shrink-0" alt="">
+              <p>Выставка «Осенний салон — 2025»</p>
             </div>
 
-            <div class="flex gap-6">
-              <img src="/assets/img/corps/v1.png" class="w-[230px] h-[120px] object-cover shrink-0" alt="">
+            <div class="flex gap-4">
+              <img src="/assets/img/corps/v1.png" class="w-[120px] h-[80px] lg:w-[230px] lg:h-[120px] object-cover shrink-0" alt="">
               <p>Выставка «Рафаэль. Версии»</p>
             </div>
 
@@ -86,91 +105,73 @@
 
         <!-- DESCRIPTION -->
         <section>
-          <h2 class="font-['Racama'] text-[40px] leading-[0.95] mb-6">
+          <h2 class="font-['Racama'] text-[28px] lg:text-[40px] leading-[0.95] mb-4 lg:mb-6">
             Описание
           </h2>
 
-          <p class="font-['Wix_Madefor_Display'] text-[20px] leading-[1.6] max-w-[855px]">
-            В Главном корпусе музея расположен центральный выставочный зал. В нём
-            организуются выставки произведений живописи, графики,
-            декоративно-прикладного искусства, представляющие творчество художников
-            Сергиева Посада, Москвы и других городов России.
-            <br><br>
-            Также в Главном корпусе проводятся новогодние представления,
-            конференции и семинары, встречи, квест-игры и другие мероприятия.
+          <p class="font-['Wix_Madefor_Display'] text-[16px] lg:text-[20px] leading-[1.6] max-w-[855px]">
+            В Главном корпусе музея расположен центральный выставочный зал...
           </p>
         </section>
 
         <!-- EXCURSIONS -->
         <section>
-          <h2 class="font-['Racama'] text-[40px] leading-[0.95] mb-4">
+          <h2 class="font-['Racama'] text-[28px] lg:text-[40px] leading-[0.95] mb-4">
             Заказ экскурсий
           </h2>
 
-          <div class="font-['Wix_Madefor_Display'] text-[20px] leading-[1.6] flex gap-8">
-            <a href="tel:+74965405356" class="hover:underline">
-              8 496 540-53-56
-            </a>
-            <a href="tel:+79850404517" class="hover:underline">
-              8 985 040-45-17
-            </a>
+          <div class="font-['Wix_Madefor_Display'] text-[16px] lg:text-[20px] leading-[1.6] flex flex-col sm:flex-row gap-3 sm:gap-8">
+            <a href="tel:+74965405356">8 496 540-53-56</a>
+            <a href="tel:+79850404517">8 985 040-45-17</a>
           </div>
         </section>
 
       </div>
 
-      <!-- RIGHT SIDEBAR -->
-      <aside class="self-start">
+      <!-- RIGHT SIDEBAR (DESKTOP) -->
+      <aside class="hidden lg:block self-start">
         <div data-include="/tpl/worktime.html"></div>
       </aside>
 
     </section>
 
     <!-- ================= ADDRESS ================= -->
-    <section class="mt-[100px]">
+    <section class="mt-[60px] lg:mt-[100px]">
 
-      <h2 class="font-['Racama'] text-[40px] leading-[0.95] mb-4">
+      <h2 class="font-['Racama'] text-[28px] lg:text-[40px] leading-[0.95] mb-4">
         Адрес
       </h2>
 
-      <div class="flex items-start justify-between gap-10 mb-10">
-        <p class="font-['Wix_Madefor_Display'] text-[20px] leading-[1.6] max-w-[520px]">
-          141310, Московская обл., г. Сергиев Посад,
-          пр-т Красной Армии, д. 144
-        </p>
+      <p class="font-['Wix_Madefor_Display'] text-[16px] lg:text-[20px] leading-[1.6] max-w-[520px] mb-6">
+        141310, Московская обл., г. Сергиев Посад, пр-т Красной Армии, д. 144
+      </p>
 
-        <a
-          href="#"
-          class="inline-flex items-center justify-center gap-4
-                 border border-[#24272A]
-                 px-10 h-[56px]
-                 font-['Wix_Madefor_Display'] text-[20px]
-                 hover:bg-[#24272A] hover:text-white transition-colors shrink-0"
-        >
-          Интерактивная карта →
-        </a>
-      </div>
+      <a
+        href="#"
+        class="inline-flex items-center justify-center
+               border border-[#24272A]
+               w-full sm:w-auto
+               px-6 lg:px-10 h-[48px] lg:h-[56px]
+               font-['Wix_Madefor_Display']
+               text-[16px] lg:text-[20px]
+               hover:bg-[#24272A] hover:text-white transition-colors mb-6"
+      >
+        Интерактивная карта →
+      </a>
 
-      <!-- MAPS -->
-      <div class="flex gap-6">
-        <img
-          src="/assets/img/corps/map-city.png"
-          alt="Карта города"
-          class="flex-1 h-[360px] object-cover"
-        >
-        <img
-          src="/assets/img/corps/map-local.png"
-          alt="Схема территории музея"
-          class="w-[360px] h-[360px] object-cover"
-        >
+      <div class="flex flex-col lg:flex-row gap-6">
+        <img src="/assets/img/corps/map-city.png" class="w-full lg:flex-1 h-[220px] lg:h-[360px] object-cover">
+        <img src="/assets/img/corps/map-local.png" class="w-full lg:w-[360px] h-[220px] lg:h-[360px] object-cover">
       </div>
 
     </section>
 
   </main>
 
-  <!-- FOOTER -->
-  <div data-include="/tpl/footer.html"></div>
+  <!-- FOOTER (теперь ВСЕГДА виден) -->
+  <footer class="relative z-0">
+    <div data-include="/tpl/footer.html"></div>
+  </footer>
 
   <!-- INCLUDE -->
   <script src="/include.js"></script>
